--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
         <div class="col-3 left">
           <div class="profile col-12">
             <img src="ahmad.jpg" alt="Profile picture">
-            <h1>John Doe</h1>
+            <h1>Ahmad Arshad</h1>
             <h2>Web Developer</h2>
           </div>
         </div>
         <div class="col-9">
           <div class="about col-12">
             <h3>About Me</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere, quam vel consequat elementum, lectus nunc hendrerit elit, ac dictum augue justo et quam. Etiam vulputate nisl vel tortor lobortis eleifend. Aenean vel nibh tristique, sagittis enim a, suscipit ex. In quis quam at est fringilla faucibus eget non nulla. </p>
+            <p>Wworking on my Portfolio as a Networks & Servers . data centre Switches & Router configurations. </p>
           </div>
           <div class="education col-12">
             <h3>Education</h3>
             <ul>
-              <li>Bachelor's Degree in Computer Science, XYZ University</li>
-              <li>Master's Degree in Web Development, ABC University</li>
+              <li>Bachelor's Degree in Computer Science, NUST University</li>
+              <li>Master's Degree in Web Development, NUSt University</li>
             </ul>
           </div>
           <div class="experience col-12">
             <h3>Experience</h3>
             <ul>
-              <li>Web Developer, XYZ Company (2018 - Present)</li>
-              <li>Front-end Developer, ABC Company (2015 - 2018)</li>
+              <li>Network and Servers, ICT NUST (2020 - 2021)</li>
+              <li>ROUTERS AND SERVERS, ICT NUST (2020 - 2021)</li>
             </ul>
           </div>
           <div class="skills col-12">
