--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="col-9">
           <div class="about col-12">
             <h3>About Me</h3>
-            <p>Wworking on my Portfolio as a Networks & Servers . data centre Switches & Router configurations. </p>
+            <p>Working on my Portfolio as a Networks & Servers . data centre Switches & Router configurations. </p>
           </div>
           <div class="education col-12">
             <h3>Education</h3>
